# ka9q-radio

./: .gitignore  CMAKE_README.md  CMakeLists.txt  COMPONENTS.md  COMPONENT_GUIDE.md  DIRECTORY_STRUCTURE.md  FILE_STRUCTURE.txt  FINAL_SUMMARY.md  INDEX.md  INIT_SYSTEMS.md  LICENSE  MACOS.md  QUICKSTART.md  README_OLD.md  START_HERE.md  STATIC_VS_TEMPLATE.md  SYSTEMD_MIGRATION.md  debian-systemd-postinst  freebsd-radiod.in  macos-homebrew-formula.rb  macos-macports-portfile  radiod@.service.in  rpm-README.md  rpm-postinstall  rpm-systemd-postinstall
debian/: postinst
